# multi_robots

./: .gitignore  AGENTS.md  README.md  requirements.txt
Docker/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.run.yml  docker-compose.yml  launchdev.ps1  launchdev.sh  launchmain.ps1  launchmain.sh
common/: README.md
common/adaptive_navigation_interfaces/: CMakeLists.txt  package.xml
common/adaptive_navigation_utilities/: package.xml  setup.cfg  setup.py
common/pioneer_interfaces/: CMakeLists.txt  package.xml
common/reference_srv/: package.xml  setup.cfg  setup.py
pioneer_base/: README.md
pioneer_base/adaptive_nav/: package.xml  setup.cfg  setup.py
pioneer_base/base_launch/: package.xml
pioneer_base/base_launch/launch/: 5cluster_hw_with_desired.launch.py  AN.launch.py  base_with_heading.launch.py  base_withjoy.launch.py  cluster_hw_with_desired.launch.py
pioneer_base/cluster_node/: package.xml  setup.cfg  setup.py
pioneer_base/controller/: package.xml  setup.py
pioneer_base/lib/: my_ros_module.py
pioneer_base/rf_source/: package.xml  setup.cfg  setup.py
pioneer_base/sensor_receiver/: package.xml  setup.cfg  setup.py
pioneer_base/teleop_core/: package.xml  setup.py
pioneer_base/unified_controller/: package.xml  setup.py
pioneer_ws/: README.md  README_CONFIG.md
pioneer_ws/config/: coordinator_settings.xpro  end_device_settings_v2.xpro  system_config.yaml  system_config.yaml.default
pioneer_ws/convert_pose/: package.xml  setup.cfg  setup.py
pioneer_ws/gps_core/: package.xml  setup.py
pioneer_ws/imu_core/: package.xml  setup.py
pioneer_ws/locomotion_core/: package.xml  setup.py
pioneer_ws/rover_launch/: package.xml  setup.py
pioneer_ws/rover_launch/launch/: driver.launch.py  open_driver.launch.py  sensor.launch.py
record/: .~lock.output_09_03_25_054915.csv#  README.md  offline_plot_contour.py  paper_graph_from_csv.ipynb  paper_graph_from_csv.py  plotting_params.yaml  plotting_params2.yaml
sim/: README.md
(+161 files in other folders)
