<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>base_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rover4-i@todo.todo">rover4-i</maintainer>
  <license>ECL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>adaptive_nav</exec_depend>
  <exec_depend>cluster_node</exec_depend>
  <exec_depend>controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rf_sim</exec_depend>
  <exec_depend>sim_launch</exec_depend>
  <exec_depend>teleop_core</exec_depend>
  <exec_depend>virtual_joy</exec_depend>
  <exec_depend>rover_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
