<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_launch</name>
  <version>0.0.0</version>
  <description>ROS2 launch package for rover system integration</description>
  <maintainer email="yneo918@gmail.com">neo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>convert_pose</exec_depend>
  <exec_depend>gps_core</exec_depend>
  <exec_depend>imu_core</exec_depend>
  <exec_depend>locomotion_core</exec_depend>
  <exec_depend>rf_receiver</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
